--- a/desafios/d10/estilo/style.css
+++ b/desafios/d10/estilo/style.css
@@ -55,7 +55,13 @@ nav > a {
 
 main {
     background-color: white;
+    padding: 20px;
+    border-radius: 10px;
+    min-width: 280px;
+    max-width: 800px;
+    margin: auto;
 }
+
 
 main h1 {
     color: var(--cor4);
