--- a/desafios/d10/estilo/style.css
+++ b/desafios/d10/estilo/style.css
@@ -56,10 +56,12 @@ nav > a {
 main {
     background-color: white;
     padding: 20px;
-    border-radius: 10px;
+    border-radius: 0px 0px 10px 10px;
+    box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.404);
     min-width: 280px;
     max-width: 800px;
     margin: auto;
+    margin-bottom: 30px;
 }
 
 
@@ -70,6 +72,16 @@ main h1 {
 
 main h2 {
     font-family: var(--fonte-android);
+}
+
+main img {
+    width: 100%;
+}
+
+.pequena {
+    width: 50%;
+    display: block;
+    margin: auto;
 }
 
 footer {
