--- a/desafios/d10/estilo/style.css
+++ b/desafios/d10/estilo/style.css
@@ -46,6 +46,7 @@ header > h1 {
     color: white;
     font-family: var(--font-destaque);
     font-size: 3em;
+    font-weight: normal;
     text-shadow: 2px 2px 0px rgba(0, 0, 0, 0.418);
     margin-bottom: 20px;
 
@@ -57,6 +58,7 @@ header > p {
     color: white;
     max-width: 500px;
     margin: auto;
+    margin-bottom: 30px;
     padding-right: 10px;
     padding-left: 10px;
 }
@@ -64,12 +66,13 @@ header > p {
 nav {
     background-color: var(--cor5);
     padding: 10px;
+    margin-top: -30px;
     box-shadow: 0px 7px 7px rgba(0, 0, 0, 0.342);
 
 }
 
 nav > a {
-    color: white;
+    color: var(--cor1);
     padding: 10px;
     border-radius: 5px;
     text-decoration: none;
@@ -98,12 +101,15 @@ main {
 main h1 {
     color: var(--cor4);
     font-family: var(--fonte-android);
+    font-size: 1.8em;
+    font-weight: normal;
 }
 
 main h2 {
     font-family: var(--fonte-android);
     color: var(--cor4);
     font-size: 1.3em;
+    text-indent: 8px;
 }
 
 main p {
@@ -136,10 +142,26 @@ main a:hover {
     color: var(--cor4);
 }
 
-.pequena {
+main img.pequena {
     max-width: 350px;
     display: block;
     margin: auto;
+}
+
+div.video {
+    background-color: var(--cor5);
+    margin: 0px -20px 30px -20px;
+    padding: 20px;
+    padding-bottom: 56.5%;
+    position: relative;
+}
+
+div.video > iframe {
+    position: absolute;
+    top: 5%;
+    left: 5%;
+    width: 90%;
+    height: 90%;
 }
 
 aside {
