--- a/desafios/d10/estilo/style.css
+++ b/desafios/d10/estilo/style.css
@@ -43,7 +43,7 @@ header {
 }
 
 header > h1 {
-    color: white;
+    color: #ffffff;
     font-family: var(--font-destaque);
     font-size: 3em;
     font-weight: normal;
@@ -55,18 +55,19 @@ header > p {
     font-family: var(--fonte-padrao);
     font-size: 1.2em;
     text-shadow: 2px 2px 0px rgba(0, 0, 0, 0.411);
-    color: white;
-    max-width: 500px;
+    color: #ffffff;
+    max-width: 400px;
     margin: auto;
-    margin-bottom: 30px;
     padding-right: 10px;
     padding-left: 10px;
+    padding-bottom: 50px;
+  
+
 }
 
 nav {
     background-color: var(--cor5);
     padding: 10px;
-    margin-top: -30px;
     box-shadow: 0px 7px 7px rgba(0, 0, 0, 0.342);
 
 }
