--- a/desafios/style.css
+++ b/desafios/style.css
@@ -1,3 +1,25 @@
 body {
+    background-color: #5a5858;
+}
 
+main {
+    background-color: #ffffff;
+    max-width: 500px;
+    margin: auto;
+    padding: 15px;
+    border-radius: 10px;
+    box-shadow: 5px 5px 5px rgba(0, 0, 0, 0.479);
+}
+
+main h1 {
+    color: #99340c;
+    text-align: center;
+}
+
+main h2 {
+    color: #a73204b4;;
+}
+
+a {
+    color: black;
 }
