--- a/desafios/d10/estilo/style.css
+++ b/desafios/d10/estilo/style.css
@@ -87,6 +87,10 @@ nav > a:hover {
     color: var(--cor5);
 }
 
+#fale {
+    margin-top: 20px;
+}
+
 main {
     background-color: white;
     padding: 20px;
