--- a/desafios/style.css
+++ b/desafios/style.css
@@ -22,4 +22,11 @@ main h2 {
 
 a {
     color: black;
+    text-decoration: none;
+}
+
+a:hover {
+    text-decoration: underline;
+    text-decoration-color: #99340c ;
+    
 }
