--- a/desafios/d11/estilo/astronauta.css
+++ b/desafios/d11/estilo/astronauta.css
@@ -1,7 +1,7 @@
 body {
     background-color: gray;
     background-image: url('../imagens/espaco.jpg');
-    background-size: 100% 100%;
+    background-size: cover;
     position: relative;
     height: 97.5vh;
 
