--- a/desafios/d11/estilo/astronauta.css
+++ b/desafios/d11/estilo/astronauta.css
@@ -1,13 +1,23 @@
 body {
-    background-color: gray;
+    /*background-color: gray;
     background-image: url('../imagens/espaco.jpg');
     background-size: cover;
+    background-repeat: no-repeat;
     position: relative;
-    height: 96vh;
+    margin: 0;
+    height: 100vh;*/
+
+    background: gray url('../imagens/espaco.jpg') no-repeat ;
+    background-size: cover;
+    margin: 0;
+    height: 100vh;
+
+   
 
 
 }
-    
+
+
 #conteudo {
     background-image: url('../imagens/astronauta.png');
     background-size: 100% 100%;
@@ -15,8 +25,8 @@ body {
     
     position: absolute;
     left: 50%;
-    top: 50%;
-    height: 400px;
-    width: 400px;
+    top:  50%;
+    height: 300px;
+    width: 300px;
     transform: translate(-50%, -50%);
 }
