--- a/desafios/d11/estilo/astronauta.css
+++ b/desafios/d11/estilo/astronauta.css
@@ -1,22 +1,10 @@
 body {
-    /*background-color: gray;
-    background-image: url('../imagens/espaco.jpg');
-    background-size: cover;
-    background-repeat: no-repeat;
-    position: relative;
-    margin: 0;
-    height: 100vh;*/
 
-    background: gray url('../imagens/espaco.jpg') no-repeat ;
+    background: #000000 url('../imagens/espaco.jpg') no-repeat ;
     background-size: cover;
     margin: 0;
     height: 100vh;
-
-   
-
-
 }
-
 
 #conteudo {
     background-image: url('../imagens/astronauta.png');
