--- a/desafios/d11/estilo/astronauta.css
+++ b/desafios/d11/estilo/astronauta.css
@@ -2,15 +2,15 @@ body {
 
     background: #000000 url('../imagens/espaco.jpg') no-repeat ;
     background-size: cover;
+    background-attachment: fixed;
     margin: 0;
     height: 100vh;
 }
 
 #conteudo {
-    background-image: url('../imagens/astronauta.png');
-    background-size: 100% 100%;
-    background-position: center center;
-    
+    background: url('../imagens/astronauta.png') center center fixed;
+    background-size: cover;
+
     position: absolute;
     left: 50%;
     top:  50%;
