--- a/desafios/d10/estilo/style.css
+++ b/desafios/d10/estilo/style.css
@@ -67,8 +67,10 @@ header > p {
 
 nav {
     background-color: var(--cor5);
-    padding: 10px;
+    padding-left: 10px;
+    padding-bottom: 10px;
     box-shadow: 0px 7px 7px rgba(0, 0, 0, 0.342);
+    
 
 }
 
@@ -77,6 +79,7 @@ nav > a {
     padding: 10px;
     border-radius: 5px;
     text-decoration: none;
+    line-height: 35px;
     font-weight: bold;
     transition-duration: 1s;
 
@@ -95,7 +98,6 @@ main {
     min-width: 280px;
     max-width: 800px;
     margin: auto;
-    margin-bottom: 30px;
 }
 
 main h1 {
