--- a/desafios/d12/estilo/parallax.css
+++ b/desafios/d12/estilo/parallax.css
@@ -50,15 +50,16 @@ a:hover {
     text-decoration: underline;
 }
 
-
 #img01 {
     background-image: url('../imagens/background001.jpg');
     background-position: right center;
+    box-shadow: inset 6px 6px 13px 0px hsla(0, 0%, 0%, 0.47);
 }
 
 #img02 {
     background-image: url('../imagens/background002.jpg');
     background-position: left center;
+    box-shadow: inset 6px 6px 13px 0px hsla(0, 0%, 0%, 0.47);
 }
 
 section {
@@ -66,7 +67,7 @@ section {
     padding-bottom: 10vh;
     padding-left: 30px;
     line-height: 2em;
-    font-size: 3vh;
+    font-size: 3.5vw;
     font-family: var(--fonte3);
 }
 
