--- a/desafios/d12/estilo/parallax.css
+++ b/desafios/d12/estilo/parallax.css
@@ -84,11 +84,10 @@ section.imagem {
 }
 
 section.imagem > p {
-    width: 350px;
+    max-width: 600px;
     display: inline-block;
     background-color: #00000031;
     text-shadow: 1px 1px 0px rgb(0, 0, 0);
-    text-align: justify;
     padding: 5px;
 }
 
