--- a/desafios/d13/estilo/redes-socias.css
+++ b/desafios/d13/estilo/redes-socias.css
@@ -40,3 +40,13 @@ main {
     width: 267px;
     height: 471px;
 }
+
+.icons {
+    position: absolute;
+    top: 90px;
+    right: 0px;
+    width: 50px;
+    height: 50px;
+    padding-right: 10px;
+    border-radius: 50%;
+}
