--- a/desafios/d13/estilo/redes-socias.css
+++ b/desafios/d13/estilo/redes-socias.css
@@ -41,12 +41,20 @@ main {
     height: 471px;
 }
 
-.icons {
-    position: absolute;
-    top: 90px;
-    right: 0px;
+#icon {
+    text-align: left;
+}
+
+#icon img {
     width: 50px;
-    height: 50px;
-    padding-right: 10px;
+    margin: 10px;
     border-radius: 50%;
+    box-shadow: 2px 2px 2px rgba(0, 0, 0, 0.507);
+    box-sizing: border-box;
+}
+
+#icon img:hover {
+    border: 2px solid rgba(255, 255, 255, 0.747);
+    transform: translate(5px, -5px);
+    box-shadow:-5px 10px 10px rgba(0, 0, 0, 0.712) ;
 }
