--- a/desafios/d13/estilo/redes-socias.css
+++ b/desafios/d13/estilo/redes-socias.css
@@ -57,4 +57,5 @@ main {
     border: 2px solid rgba(255, 255, 255, 0.747);
     transform: translate(5px, -5px);
     box-shadow:-5px 10px 10px rgba(0, 0, 0, 0.712) ;
+    transition: 0.3s;
 }
