--- a/desafios/d13/estilo/redes-socias.css
+++ b/desafios/d13/estilo/redes-socias.css
@@ -11,9 +11,6 @@ html, body {
 }
 body {
     background-color: black;
-}
-
-main {
     position: relative;
     background-image: url('../imagens/fundo-madeira.jpg');
     background-size: cover;
@@ -21,6 +18,7 @@ main {
     width: 100vw;
     height: 100vh;
 }
+
 
 #telefone {
     position: absolute;
@@ -31,7 +29,7 @@ main {
     background-repeat: no-repeat;
     width: 310px;
     height: 626px;
-    margin-left: 2rem;
+    margin-left: 2em;
 }
 
 #tela {
