--- a/desafios/d14/estilo/mobile-first.css
+++ b/desafios/d14/estilo/mobile-first.css
@@ -7,44 +7,83 @@
     box-sizing: border-box;
 }
 
-body {
+body, html {
     background-color: #8a2be2;
+    width: 100vw;
+    height: 100vh;
 }
 
-main {position: absolute;
+main {
+    position: relative;
+    width: 100vw;
+    height: 100vh;
+}
+
+section {
+    position: absolute;
     top: 50%;
     left: 50%;
     transform: translate(-50%, -50%);
-    background-color: #ffffff;
-    width: 15.62em;
+    background-color: white;
+    width: 250px;
     height: 500px;
-    border-radius: 15px;
+    border-radius: 20px;
+    box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.466);
 }
 
 #imagem {
     background-image: url(../imagens/entrada.jpg);
-    background-size: 100%;
+    background-repeat: no-repeat;
+    background-size: cover;
+    background-position: left bottom;
+    width: 100%;
     height: 200px;
-    border-radius: 15px 15px 0px 0px;
-    
+    border-radius: 20px 20px 0px 0px;
 }
 
-section h1 {
+#formulario {
+    padding: 10px;
+}
+
+#formulario h1 {
     text-align: center;
-    font-size: 1.37em;
-    padding: 0.62em 0px 0.62em 0px;
-    
+    padding: 10px;
+}
+
+#formulario p {
+    font-size: 0.8rem;
 }
 
 .campo {
-    background-color: #641ea5;
-    margin-left: 10px;
-    margin-right: 10px;
-    margin-bottom: 8px;
-    border-radius: 8px;
-    height: 42px;
+    background-color: #5f2c82;
+    height: 40px;
+    width: 100%;
+    margin: 5px 0px;
+    border-radius: 10px;
+    border: 2px solid #5f2c82;
+    
+    
+}
+.campo > i {
+    color: white;
+    
 }
 
+#ilogin, #isenha {
+  background-color: rgb(130, 228, 195);
+  height: 38px;
+  border-radius: 10px;
+  border: 1px solid #5f2c82;
+  margin-left: 26px;
+}
 
-
-
+#entrar {
+    background-color: rgb(60, 139, 113);
+    color: white;
+    width: 100%;
+    height: 40px;
+    border-radius: 8px;
+    border: none;
+    cursor: pointer;
+    
+}
