--- a/desafios/d14/estilo/mobile-first.css
+++ b/desafios/d14/estilo/mobile-first.css
@@ -22,18 +22,9 @@ html, body {
     
 }
 
-div#img {
-    background-image: url(../imagens/entrada.jpg) ;
-    background-size: cover;
-    background-position: left bottom;
-    
-    height: 200px;
-
-}
-
 section#login {
     background-color: var(--white);
-    height: 520px;
+    height: 540px;
     width: 270px;
     border-radius: 20px;
     overflow: hidden;
@@ -50,6 +41,75 @@ section#login h1 {
     padding-bottom: 10px;
 }
 
+#form p {
+    text-align: justify;
+    font-family: sans-serif;
+    font-size: 14px;
+}
+
 section > div#form {
-    padding: 10px;
+    padding: 15px;
+}
+
+div#img {
+    background-image: url(../imagens/entrada.jpg) ;
+    background-size: cover;
+    background-position: left bottom;
+    height: 200px;
+
+}
+
+div.campo {
+    background-color: var(--formulario);
+    width: 100%;
+    height: 40px;
+    border-radius: 8px;
+    margin: 5px 0px;
+    border: 2px solid #41539E;
+    
+}
+
+#icon1, #icon2 {
+    color: white;
+    font-size: 2em;
+    width: 40px;
+    padding: 5px;
+}
+
+
+#iemail, #isenha {
+    background-color: #b3c1fa;
+    height: 100%;
+    width: calc(100% - 45px);
+    font-size: 1em;
+    border-radius: 8px;
+    outline: none;
+    border: 0px;
+
+    transform: translateY(-12px);
+}
+
+form > input[type=submit]{
+    font: 1.2em solid var(--white);
+    height: 40px;
+    width: 100%;
+    border-radius: 5px ;
+    border: none;
+    font: 1.3em bolder ;
+    background-color: var(--btn);
+    color: white
+}
+
+a {
+    display: block;
+    text-align: center;
+    text-decoration: none;
+    width: 100%;
+    height: 40px;
+    border-radius: 5px;
+    border: 1px solid var(--btn);
+    color: #4664dd;
+    margin: 5px 0px;
+    padding-top:5px;
+
 }
