--- a/desafios/d14/estilo/mobile-first.css
+++ b/desafios/d14/estilo/mobile-first.css
@@ -89,6 +89,11 @@ div.campo {
     transform: translateY(-13px);
 }
 
+#isenha:focus, #iemail:focus {
+    background-color: white ;
+   
+}
+
 form > input[type=submit]{
     font: 1.2em solid var(--white);
     height: 40px;
@@ -98,6 +103,14 @@ form > input[type=submit]{
     font: 1.3em bolder ;
     background-color: var(--btn);
     color: white
+}
+
+input[type=submit]:hover {
+    background-color: #4c5fad ;
+    cursor: pointer;
+
+    transition: 0.3s;
+    
 }
 
 a {
@@ -112,4 +125,8 @@ a {
     margin: 5px 0px;
     padding-top:5px;
 
+}
+
+a:hover {
+    background-color: #b3c1fa;
 }
