--- a/desafios/d14/estilo/media-query.css
+++ b/desafios/d14/estilo/media-query.css
@@ -1,10 +1,20 @@
 @charset "UTF8";
 
+@media screen and (max-width:767px) {
+    section#login {
+        transition: width 1s, height 1s;
+        transition-timing-function: cubic-bezier(0.25, 0.1, 0.35, 0.65);
+    }
+}
+
 @media screen and (min-width:768px) and (max-width:992px) {
     
     section#login {
         width:80vw ;
         height: 300px;
+
+        transition: width 1s, height 1s;
+        transition-timing-function: cubic-bezier(0.25, 0.1, 0.35, 0.65);
     }
 
     div#img {
@@ -23,6 +33,9 @@
     section#login {
         width: 70%;
         height: 350px;
+
+        transition: width 1s, height 1s;
+        transition-timing-function: cubic-bezier(0.25, 0.1, 0.35, 0.65);
     }    
 
     div#img {
