--- a/desafios/d15/estilo/loading.css
+++ b/desafios/d15/estilo/loading.css
@@ -2,7 +2,7 @@ body {
     margin: 0;
     padding: 0;
     font-family: monospace;
-    color: black;
+    background-color: #000000;
 }
 
 .container {
@@ -10,6 +10,55 @@ body {
     text-align: center;
     justify-content: center;
     align-items: center;
-    height: 100vh;
+    min-height: 100vh;
 }
 
+.ring {
+    position: absolute;
+    width: 200px;
+    height: 200px;
+}
+
+.ring::before {
+    position: absolute;
+    content: '';
+    left: 0;
+    top: 0;
+    height: 100%;
+    width: 100%;
+    border-radius: 50%;
+    box-shadow: 0 0 5px rgba(255, 255, 255, 0.3);
+    animation: ring 2s linear infinite;
+}
+
+@keyframes ring {
+    0%{
+        transform: rotate(0deg);
+        box-shadow: 1px 5px 2px #e65c00;
+    }
+
+    50% {
+        transform: rotate(180deg);
+        box-shadow: 1px 5px 2px #18b201;
+    }
+
+    100% {
+        transform: rotate(360deg);
+        box-shadow: 1px 5px 2px #0456c8;
+    }
+}
+
+span {
+    color: wheat;
+    font-size: 20px;
+    letter-spacing: 3px;
+    text-transform: uppercase;
+    line-height: 200px;
+    animation: text 3s ease-in-out infinite;
+}
+
+@keyframes text {
+    50% {
+        color: #000000;
+    }
+}
