--- a/desafios/d15/estilo/loading.css
+++ b/desafios/d15/estilo/loading.css
@@ -13,7 +13,6 @@ body {
     min-height: 100vh;
 }
 
-
 .ring {
     position: absolute;
     width: 200px;
@@ -25,10 +24,10 @@ body {
     content: '';
     left: 0;
     top: 0;
-    height: 100%;
     width: 100%;
+    height: 100%;
     border-radius: 50%;
-    box-shadow: 0 0 5px rgba(255, 255, 255, 0.3);
+    box-shadow: 0 0 5px rgb(255, 255, 255, 0.3);
     animation: ring 2s linear infinite;
 }
 
@@ -50,7 +49,7 @@ body {
 }
 
 span {
-    color: #f5deb3;
+    color: wheat;
     font-size: 20px;
     text-transform: uppercase;
     letter-spacing: 3px;
