--- a/desafios/d16/estilo/landing-page.css
+++ b/desafios/d16/estilo/landing-page.css
@@ -85,7 +85,7 @@ h6 {
 }
 
 .menu-content h1 {
-    font-size: 1.8rem;
+    font-size: 2.2rem;
     color: var(--primary-color);
 }
 
@@ -109,7 +109,26 @@ h6 {
     font-size: 1.8rem;
     font-style: italic;
     color: #000000;
+    position: relative;
 }
+
+.menu ul li a::after {
+    content: '';
+    position: absolute;
+    bottom: 2.4rem;
+    background-color: var(--secundary-color);
+    left: 50%;
+    width: 0%;
+    height: 0.2rem;
+    transition: all 300ms ease-in-out;
+}
+
+.menu ul li a:hover::after {
+    left: 25%;
+    width: 50%;
+}
+
+
 
 
 
