--- a/desafios/d16/estilo/landing-page.css
+++ b/desafios/d16/estilo/landing-page.css
@@ -28,6 +28,7 @@ body {
     font-size: 1.6rem;
     line-height: 4rem;
     font-family: var(--texto);
+    height: 100vh;
     
 }
 
@@ -60,6 +61,10 @@ h6 {
     font-size: 3.5rem;
 }
 
+.teste {
+    height: 100vh;
+}
+
 
 .main-content {
     margin: 0 auto;
@@ -67,7 +72,7 @@ h6 {
 }
 
 .menu {
-    background-color: var(--white-color);
+    background-color: var(--primary-color);
     position: fixed;
     z-index: 1;
     top: 0;
@@ -85,8 +90,14 @@ h6 {
 }
 
 .menu-content h1 {
-    font-size: 2.2rem;
-    color: var(--primary-color);
+    font-family: var(--titulo);
+    font-size: 3rem;
+    color: var(--white-color);
+}
+
+
+.menu-content span {
+    color: var(--secundary-color);
 }
 
 .menu h1 a {
@@ -102,6 +113,7 @@ h6 {
     display: block;
     text-decoration: none;
     text-align: center;
+    
 }
 
 .menu ul li a {
@@ -110,6 +122,9 @@ h6 {
     font-style: italic;
     color: #000000;
     position: relative;
+    text-transform: uppercase;
+    letter-spacing: 0.7rem;
+    color: var(--white-color);
 }
 
 .menu ul li a::after {
