--- a/desafios/d16/estilo/landing-page.css
+++ b/desafios/d16/estilo/landing-page.css
@@ -170,26 +170,24 @@ h6 {
     display: flex;
     justify-content: center;
     align-items: center;
+    color: inherit;
     background-color: transparent;
     text-transform: uppercase;
+    text-decoration: none;
     font-size: 2.5rem;
     width: 30rem;
     height: 7rem;
     border: 2px solid var(--secundary-color);
     letter-spacing: 0.3rem;
     transition: background-color 0.2s ease;
-    
 }
 
 .btn-portfolio:hover {
+    cursor: pointer;
     background-color: var(--secundary-color);
     
 }
 
-.btn-portfolio a {
-    text-decoration: none;
-    color: inherit;
-}
 .white-bg {
     height: 100vh;
     
