--- a/desafios/d16/estilo/landing-page.css
+++ b/desafios/d16/estilo/landing-page.css
@@ -108,7 +108,6 @@ h6 {
     display: block;
     text-decoration: none;
     text-align: center;
-    
 }
 
 .menu ul li a {
@@ -166,6 +165,11 @@ h6 {
     letter-spacing: 0.3rem;
 }
 
+.text-content h1:nth-child(3) {
+    color: #dc143c;
+
+}
+
 .btn-portfolio {
     display: flex;
     justify-content: center;
@@ -185,7 +189,6 @@ h6 {
 .btn-portfolio:hover {
     cursor: pointer;
     background-color: var(--secundary-color);
-    
 }
 
 .white-bg {
